# demand_forecast_ops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  pyproject.toml  railway.json  requirements.txt  start.sh
.dvc/: config
.github/workflows/: ci.yml
docs/: architecture.md  model_card.md  risk_log.md  validation_strategy.md
models/: .gitignore  feature_columns.joblib.dvc  lgbm_forecaster.joblib.dvc  training_metadata.json  training_metadata.json.dvc
scripts/: download_data.py  evaluate.py  explore_data.py  train.py  validate_data.py
src/agents/: replenishment_agent.py  tools.py
src/config/: logging_config.py  paramns.yaml  settings.py
src/features/: calendar.py  lag_features.py  pipeline.py
src/genai/: narrative_generator.py  prompt_templates.py
src/ingestion/: contracts.py  loader.py
src/models/: baseline.py  lightgbm_direct.py  metrics.py  validation.py
src/monitoring/: drift.py  forecast_tracker.py  retraining_trigger.py
src/serving/: app.py  dashboard.html  predictor.py  schemas.py
tests/: readme.md
tests/integration/: test_feature_parity.py
tests/scenarios/: test_agent_scenarios.py
tests/unit/: test_contracts.py  test_features.py  test_monitoring.py
